Update isolated-testing.md